[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/Shops/BaseShop/BaseShop.gd" type="Script" id=1]
[ext_resource path="res://Entities/Shops/BaseShop/Sprite-0003.png" type="Texture" id=2]
[ext_resource path="res://Menus/UITheme.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 168, 168 )

[node name="BaseShop" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Building" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ButtonMarker" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="CanvasLayer/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
